# lestrutter

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.h  camera.h  collider.h  mathtypes.h  ol_mesh.h  physics.h  rigidbody.h
include/glad/: glad.h
res/: parts.blend  parts.blend1  parts.glb
res/shaders/: vert.txt
src/: camera.cpp  camera.h  collider.cpp  glad.c  main.cpp  ol_mesh.cpp  ol_mesh.h  part_loader.cpp  part_loader.h  parts.cpp  parts.h  physics.cpp  rigidbody.cpp  shader.h
